Refactor Stage 6, 7, 8 test workflows to comply with security policies
